# nand2tetris-micah-implementation

./: .gitignore  README.md
projects/01/: DMux8Way.hdl  Mux.hdl  Mux4Way16.hdl  Mux8Way16.hdl
projects/02/: ALU.hdl  FullAdder.hdl  HalfAdder.hdl  Nand16.hdl  Or16Way.hdl
projects/03/a/: Bit.hdl  DMux16.hdl  DMux8Way16.hdl  PC.hdl  RAM64.hdl  RAM8.hdl
projects/03/b/: RAM16K.hdl  RAM4K.hdl  RAM512.hdl
projects/04/fill/: Fill.asm
projects/04/mult/: Mult.asm
projects/05/: CPU.hdl  Computer.hdl  Memory.hdl
projects/06/add/: Add.asm
projects/06/hackAssembler/: hackAssembler.cpp  hackParser.cpp  hackParser.h  hackSymbolTable.cpp  hackSymbolTable.h  hackTranslator.cpp  hackTranslator.h
projects/07_and_08/vm_translator/: README.md  main.py  pyproject.toml  utils.py
projects/07_and_08/vm_translator/classes/: code_writer.py  parser.py
projects/07_and_08/vm_translator/models/: arithmetic.py  base.py  branching.py  function.py  mapping.py  memory_access.py
