[project]
name = "vm-translator"
version = "0.1.0"
description = "A translator for the Hack VM language to assembly"
authors = [
    {name = "MicahGH"}
]
requires-python = ">=3.13"
dependencies = [
    "fire (>=0.7.0,<0.8.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.3"
black = "^25.1.0"

